--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna</title>
-    </head>
-
+        <link rel="stylesheet" type="text/css" href="../styles.css">
+        <script src="https://kit.fontawesome.com/415323f8dc.js" crossorigin="anonymous"></script>
     <body>
-        <h1>Lasagna Recipe</h1>
-
+        <h1>Lasagna</h1>
+        <div class="chef">
         <img src="https://www.allrecipes.com/thmb/ob8RQbMoswWvvAiQcYfsMsggzo0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4378426-fd49e356662348bab2376d6369b374f4.jpg" alt="lasagna image"  height="310" weight="310">
         <h6>©Photo by Allrecipes Member</h6>
-
-        <p>A delicious lasagna recipe for an unforgettable culinary experience</p>
-        <p>Ragu, bechamel, lasagna pasta and lot of fun!</p>
+        </div>
+        <p class="description">A delicious lasagna recipe for an unforgettable culinary experience</p>
+        <p class="description">Ragu, bechamel, lasagna pasta and lot of fun!</p>
         
             <h3> Ingredients:</h3>
             <ul>
@@ -51,12 +51,12 @@
                 <h2>More Recipes:</h2>
                 <ul>
                     <li><a href="./tiramisu.html">Tiramisu</a></li>
-                    <li><a href="./spaghetti.html">Spaghetti with garlic, oil and chili-pepper</a></li>
+                    <li><a href="./spaghetti.html">Spaghetti with Garlic and Oil</a></li>
                 </ul>
-                <p>Back <a href="../index.html">Home</a></p>
+                <p class="homepage">Back <a href="../index.html"> Home <i class="fa-solid fa-house" style="font-size:24px; color:rgba(0, 0, 255, 0.763);"></i></a></p>
             </nav>
-            <p>If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com/recipes/Lasagne-with-sausage-ragu.html" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
-            <p>Thank you, <a href="https://www.allrecipes.com/recipe/11728/italian-lasagna/" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
+            <p id="index-para">If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com/recipes/Lasagne-with-sausage-ragu.html" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
+            <p id="greetings">Thank you, <a href="https://www.allrecipes.com/recipe/11728/italian-lasagna/" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
 
     </body>
 </html>
