--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Tiramisu</title>
+        <link rel="stylesheet" type="text/css" href="../styles.css">
+        <script src="https://kit.fontawesome.com/415323f8dc.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <h1>Tiramisu Recipe</h1>
-
+        <h1>Tiramisu</h1>
+        <div class="chef">
         <img src="https://www.allrecipes.com/thmb/asxPfWr-PNWvnqA7_6qB9jkxSNc=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/21412-tiramisu-ii-DDMFS-4x3-cb78d4ad0e75477ebc2a16968c508fde.jpg" alt="tiramisu image"  height="310" weight="310">
         <h6>©Photo by DOTDASH MEREDITH FOOD STUDIOS</h6>
-
-        <p>A delicious tiramisu recipe for an unforgettable culinary experience<p>
-        <p>Coffee, mascarpone, cocoa powder, ladyfingers sponge cakes and lot of fun!</p>
+        </div>
+        <p class="description">A delicious tiramisu recipe for an unforgettable culinary experience<p>
+        <p class="description">Coffee, mascarpone, cocoa powder, ladyfingers sponge cakes and lot of fun!</p>
         
             <h3> Ingredients:</h3>
             <ul>
@@ -37,13 +39,13 @@
                 <h2>More Recipes:</h2>
                 <ul>
                     <li><a href="lasagna.html">Lasagna</a></li>
-                    <li><a href="spaghetti.html">Spaghetti with garlic, oil and chili-pepper</a></li>
+                    <li><a href="spaghetti.html">Spaghetti with Garlic and Oil</a></li>
                 </ul>
-                <p>Back <a href="../index.html">Home</a></p>
+                <p class="homepage">Back <i class="fa-solid fa-house" style="font-size:24px; color:rgba(0, 0, 255, 0.763);"></i><a href="../index.html"> Home</a></p>
             </nav>
 
-            <p>If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com/recipes/Tiramisu.html" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
-            <p>Thank you, <a href="https://www.allrecipes.com/recipe/21412/tiramisu-ii/" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
+            <p id="index-para">If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com/recipes/Tiramisu.html" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
+            <p id="greetings">Thank you, <a href="https://www.allrecipes.com/recipe/21412/tiramisu-ii/" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
 
         </body>
 </html>
