--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>The Odin Recipes</title>
-    </head>
+        <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/415323f8dc.js" crossorigin="anonymous"></script>    </head>
 
     <body>
         <h1>The Odin Recipes</h1>
-        <img src="https://www.nicepng.com/png/full/85-857986_28-collection-of-cooking-clipart-images-free-cooking.png" alt="Let's get cooking!"  height="310" weight="310">
-        <h6>©Photo by nicepng.com</h6>
+        <div class="chef">
+            <img src="https://www.nicepng.com/png/full/85-857986_28-collection-of-cooking-clipart-images-free-cooking.png" alt="Let's get cooking!" height="310" weight="310">
+            <h6>©Photo by nicepng.com</h6>
+        </div>
         <hr>
 
-        <nav>
+        <nav class="menu">
             <ul>
                 <li><a href="recipes/lasagna.html">Lasagna</a></li>
                 <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
@@ -20,8 +24,8 @@
         </nav>
         <hr>
 
-        <p>If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
-        <p>Thank you, <a href="https://www.allrecipes.com" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
+        <p id="index-para">If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
+        <p id="greetings">Thank you, <a href="https://www.allrecipes.com" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
         
     </body>
 </html>
