--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,17 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spaghetti with Garlic, Oil and Chili-paper</title>
+        <link rel="stylesheet" type="text/css" href="../styles.css">
+        <script src="https://kit.fontawesome.com/415323f8dc.js" crossorigin="anonymous"></script>
         
     </head>
 
     <body>
         <h1>Spaghetti with Garlic and Oil</h1>
-
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9009058.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="spaghetti" height="310" weight="310">
-        <h6>©Photo by E96</h6>
-
-        <p>A delicious spaghetti recipe for an unforgettable culinary experience</p>
-        <p>Pasta, garlic, oil, grated cheese and lot of fun!</p>
+        <div class="chef">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9009058.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="spaghetti" height="310" weight="310">
+            <h6>©Photo by E96</h6>
+        </div>
+        <p class="description">A delicious spaghetti recipe for an unforgettable culinary experience</p>
+        <p class="description">Pasta, garlic, oil, grated cheese and lot of fun!</p>
         
             <h3> Ingredients:</h3>
             <ul>
@@ -39,10 +41,10 @@
                     <li><a href="tiramisu.html">Tiramisu</a></li>
                     <li><a href="lasagna.html">Lasagna</a></li>
                 </ul>
-                <p>Back <a href="../index.html">Home</a></p>
+                <p class="homepage">Back <i class="fa-solid fa-house" style="font-size:24px; color:rgba(0, 0, 255, 0.763);"></i><a href="../index.html"> Home </a></p>
             </nav>
 
-            <p>If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com/recipes/Spaghetti-aglio-e-olio-Spaghetti-with-garlic-oil-and-chili-pepper.html" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
-            <p>Thank you, <a href="https://www.allrecipes.com/recipe/21412/tiramisu-ii/" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
+            <p id="index-para">If you want other Italian recipes, visit the <a href="https://www.giallozafferano.com/recipes/Spaghetti-aglio-e-olio-Spaghetti-with-garlic-oil-and-chili-pepper.html" rel="noopener noreferrer">Giallo Zafferano</a> website where you can find lots of tasty ideas!</p>
+            <p id="greetings">Thank you, <a href="https://www.allrecipes.com/recipe/21412/tiramisu-ii/" rel="noopener noreferrer">allrecepies</a>, for images and ideas!</p>
         </body>
 </html>
